changes:  - a few misc. refinements  - renamed "Smelted Iron" and "Smelted Gold" to Iron Ingots and Gold Ingots  - fixed player spawning with a guard tower already built  - fixed the names of golden items

--- a/Mncrft/MncrftGame.resx
+++ b/Mncrft/MncrftGame.resx
@@ -148,9 +148,9 @@ Stone Axes
 Iron Swords
 Iron Pickaxes
 Iron Axes
-Gold Swords
-Gold Pickaxes
-Gold Axes
+Golden Swords
+Golden Pickaxes
+Golden Axes
 Diamond Swords
 Diamond Pickaxes
 Diamond Axes
